# OpenGL_study

./: README.md
1.Create window OpenGL/: CMakeLists.txt
1.Create window OpenGL/.cache/clangd/index/: glad.c.936236AF75D4C8DD.idx  glad.h.E98C13B1C6E31785.idx  main.cpp.60247790AAB598E1.idx
1.Create window OpenGL/src/: glad.c  main.cpp
1.Create window OpenGL/src/config/: config.h
OpenGL/: .gitignore  CMakeLists.txt
OpenGL/.cache/clangd/index/: camera.h.43B5A01B822F8730.idx  config.cpp.389F71405E32CF4C.idx  config.h.17D9A60EA34985F6.idx  config.h.F2F66A692E5640BA.idx  glad.c.66593F367109D8EF.idx  glad.h.693CFAF23A72D0C0.idx  khrplatform.h.254A03E2E13C79CD.idx  khrplatform.h.C1B842EA06D4BD8F.idx  main.cpp.5D17ADDA1862AA63.idx  shader.cpp.6A35EBF590C8ECE8.idx  shader.h.ADC7CE649E02352A.idx  stb_image.cpp.C803E0D506D081A0.idx  stb_image.h.4E8A7BC6E94C65FA.idx
OpenGL/include/glad/: glad.h
OpenGL/src/: main.cpp
OpenGL/src/camera/: camera.h
OpenGL/src/config/: config.cpp  config.h
OpenGL/src/model/: mesh.cpp  mesh.h  model.cpp  model.h
OpenGL/src/shader/: fragment.sh  fragment_box.sh  fragment_lamp.sh  shader.cpp  shader.h  vertex.sh  vertex_box.sh
OpenGL/src/source/ShProgram/: fragment_box.sh  fragment_model.sh  vertex_box.sh
